# devops-task

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py
app/bookstore/: config.py  crud.py  db.py  main.py  models.py
app/test/: conftest.py
app/test/integration/: test_bookstore.py
docker/: Dockerfile
env/local/: bookstore.env  postgres.env
k8s/: db_manifest.yml  deployment.yml  secret.yml  service.yml
