[project]
name = "bookstore-api" 
version = "1.0" 
description = "A Bookstore API" 
readme = "README.md"
requires-python = ">=3.11.1"
authors = [{name = "A. Junior Developer", email = "junior@dtse.com"}]
maintainers = [
    {name = "J. Melicharik", email = "melicharik@dtse.com" },
    {name = "A. Junior Developer", email = "junior@dtse.com"}
]